Revert "PRL-4518:Fixed sonar issue"
This reverts commit 89b858ee245422620d83fb27c3018ee48d6953dc.