@@ -86,6 +86,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static java.util.Objects.requireNonNull;
 import static java.util.Optional.ofNullable;
@@ -300,7 +301,8 @@ public class CallbackController {
                             caseData.getApplicants().stream()
                                 .map(
                                     Element::getValue)
-                                .toList()))
+                                .collect(
+                                    Collectors.toList())))
                 .childrenConfidentialDetails(confidentialityTabService.getChildrenConfidentialDetails(
                 caseData)).state(
                     State.SUBMITTED_NOT_PAID)
@@ -678,7 +680,7 @@ public class CallbackController {
                                .categoryId(DocumentCategoryEnum.documentCategoryChecklistEnumValue1.getDisplayedValue())
                                .build())
                     .id(element.getId()).build())
-                                      .toList());
+                                      .collect(Collectors.toList()));
             log.info("*** test evidences *** {}", quarantineDocs);
         }
         if (correspondenceList != null) {
@@ -690,7 +692,7 @@ public class CallbackController {
                                .categoryId(DocumentCategoryEnum.documentCategoryChecklistEnumValue2.getDisplayedValue())
                                .build())
                     .id(element.getId()).build())
-                                      .toList());
+                                      .collect(Collectors.toList()));
         }
         List<Element<OtherDocuments>> otherDocumentsList = caseData.getOtherDocuments();
         if (otherDocumentsList != null) {
@@ -703,7 +705,7 @@ public class CallbackController {
                                .restrictCheckboxCorrespondence(element.getValue().getRestrictCheckboxOtherDocuments())
                                .build())
                     .id(element.getId()).build())
-                                      .toList());
+                                      .collect(Collectors.toList()));
         }
         caseData.setLegalProfQuarantineDocsList(quarantineDocs);
         Map<String, Object> caseDataUpdated = callbackRequest.getCaseDetails().getData();
