@@ -23,6 +23,7 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static java.util.Collections.emptyList;
 import static java.util.Objects.nonNull;
@@ -54,7 +55,7 @@ public class CaseDataOtherPersonsElementsMapper {
 
         return nonNull(otherPersonDetailsList) ? otherPersonDetailsList.stream()
                 .map(otherPersonDetail -> Element.<PartyDetails>builder().value(buildPartyDetails(otherPersonDetail)).build())
-                .toList() : emptyList();
+                .collect(Collectors.toList()) : emptyList();
     }
 
     private static PartyDetails buildPartyDetails(OtherPersonDetail otherPersonDetail) {
