@@ -19,6 +19,7 @@ import uk.gov.hmcts.reform.prl.services.tab.alltabs.AllTabServiceImpl;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static java.util.Optional.ofNullable;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C100_CASE_TYPE;
@@ -41,7 +42,7 @@ public class ConfidentialDetailsMapper {
                 List<PartyDetails> respondents = caseData.getRespondents()
                     .stream()
                     .map(Element::getValue)
-                    .toList();
+                    .collect(Collectors.toList());
                 respondentsConfidentialDetails = getRespondentConfidentialDetails(respondents);
             }
 
