@@ -14,6 +14,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
 import javax.json.JsonArray;
 import javax.json.JsonObject;
 import javax.json.JsonValue;
@@ -35,7 +36,7 @@ public class RespondentsMapper {
         }
         List<PartyDetails> respondentList = respondents.stream()
             .map(Element::getValue)
-            .toList();
+            .collect(Collectors.toList());
         AtomicInteger counter = new AtomicInteger(1);
         return respondentList.stream().map(respondent -> getRespondent(counter, respondent,
                                                                        respondentSolicitorMap
