@@ -17,6 +17,7 @@ import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import javax.ws.rs.NotFoundException;
 
 import static java.util.Optional.ofNullable;
@@ -43,7 +44,7 @@ public class OrganisationService {
                 .map(eachItem -> Element.<PartyDetails>builder()
                     .value(getApplicantWithOrg(eachItem.getValue(), userToken))
                     .id(eachItem.getId()).build())
-                .toList();
+                .collect(Collectors.toList());
             caseData = caseData.toBuilder()
                 .applicants(applicants)
                 .build();
@@ -62,7 +63,7 @@ public class OrganisationService {
                 .map(eachItem -> Element.<PartyDetails>builder()
                     .value(getRespondentWithOrg(eachItem.getValue(), userToken))
                     .id(eachItem.getId()).build())
-                .toList();
+                .collect(Collectors.toList());
 
             caseData = caseData.toBuilder().respondents(respondents).build();
         }
