@@ -22,6 +22,7 @@ import uk.gov.hmcts.reform.prl.models.email.EmailTemplateNames;
 import uk.gov.service.notify.NotificationClient;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -56,11 +57,11 @@ public class SolicitorEmailService {
                 .getApplicants()
                 .stream()
                 .map(Element::getValue)
-                .toList();
+                .collect(Collectors.toList());
 
             List<String> applicantNamesList = applicants.stream()
                 .map(PartyDetails::getLabelForDynamicList)
-                .toList();
+                .collect(Collectors.toList());
 
             String applicantNames = String.join(", ", applicantNamesList);
             Court court = courtLocatorService.getNearestFamilyCourt(caseData);
@@ -157,11 +158,11 @@ public class SolicitorEmailService {
             .getApplicants()
             .stream()
             .map(Element::getValue)
-            .toList();
+            .collect(Collectors.toList());
 
         List<String> applicantSolicitorEmailList = applicants.stream()
             .map(PartyDetails::getSolicitorEmail)
-            .toList();
+            .collect(Collectors.toList());
 
         solicitorEmail = (!applicantSolicitorEmailList.isEmpty() && null != applicantSolicitorEmailList.get(0)
             && !applicantSolicitorEmailList.get(0).isEmpty() && applicantSolicitorEmailList.size() == 1) ? applicantSolicitorEmailList.get(
@@ -237,11 +238,11 @@ public class SolicitorEmailService {
             .getApplicants()
             .stream()
             .map(Element::getValue)
-            .toList();
+            .collect(Collectors.toList());
 
         List<String> applicantSolicitorEmailList = applicants.stream()
             .map(PartyDetails::getSolicitorEmail)
-            .toList();
+            .collect(Collectors.toList());
 
         solicitorEmail = (!applicantSolicitorEmailList.isEmpty() && null != applicantSolicitorEmailList.get(0)
             && !applicantSolicitorEmailList.get(0).isEmpty() && applicantSolicitorEmailList.size() == 1) ? applicantSolicitorEmailList.get(
