@@ -21,6 +21,7 @@ import uk.gov.hmcts.reform.prl.models.cafcass.PostcodeResponse;
 import java.util.HashMap;
 import java.util.Locale;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -53,7 +54,7 @@ public class PostcodeLookupService {
                     .filter(eachObj -> null != eachObj.getDpa()
                         && eachObj.getDpa().getCountryCode().equalsIgnoreCase(countryCode))
                     .map(eachObj -> eachObj.getDpa().getBuildingNumber())
-                    .toList().isEmpty();
+                    .collect(Collectors.toList()).isEmpty();
             }
         }
         return returnValue;
