@@ -37,6 +37,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import static java.util.Optional.ofNullable;
 import static org.apache.commons.collections.MapUtils.isNotEmpty;
@@ -212,7 +213,7 @@ public class CaseService {
         return caseDetails
             .stream()
             .map(caseDetail -> CaseUtils.getCaseData(caseDetail, objectMapper))
-            .toList();
+            .collect(Collectors.toList());
     }
 
     private List<CaseDetails> performSearch(String authToken, UserDetails user, Map<String, String> searchCriteria,
@@ -353,7 +354,7 @@ public class CaseService {
             .stream()
             .map(Element::getValue)
             .filter(x -> accessCode.equals(x.getAccessCode()))
-            .toList();
+            .collect(Collectors.toList());
 
         if (!matchingCaseInvite.isEmpty()) {
             accessCodeStatus = VALID;
