@@ -16,6 +16,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static java.util.Optional.ofNullable;
 import static uk.gov.hmcts.reform.prl.enums.Event.OTHER_PEOPLE_IN_THE_CASE_REVISED;
@@ -38,7 +39,7 @@ public class OtherPeopleInTheCaseRevisedChecker implements EventChecker {
         if (othersToNotify.isPresent()) {
             List<PartyDetails> others = caseData.getOtherPartyInTheCaseRevised()
                 .stream().map(Element::getValue)
-                .toList();
+                .collect(Collectors.toList());
 
             if (others.isEmpty()) {
                 return false;
@@ -65,7 +66,7 @@ public class OtherPeopleInTheCaseRevisedChecker implements EventChecker {
         if (othersToNotify.isPresent()) {
             List<PartyDetails> others = caseData.getOtherPartyInTheCaseRevised()
                 .stream().map(Element::getValue)
-                .toList();
+                .collect(Collectors.toList());
 
             boolean started = others.stream().anyMatch(Objects::nonNull);
             if (started) {
