@@ -15,6 +15,7 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static java.util.Optional.ofNullable;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C100_CASE_TYPE;
@@ -42,7 +43,7 @@ public class RespondentsChecker implements EventChecker {
             List<PartyDetails> respondents = respondentsWrapped.get()
                 .stream()
                 .map(Element::getValue)
-                .toList();
+                .collect(Collectors.toList());
 
             for (PartyDetails p : respondents) {
                 if (!(validateMandatoryFieldsForRespondent(p, caseData.getCaseTypeOfApplication()))) {
@@ -73,7 +74,7 @@ public class RespondentsChecker implements EventChecker {
             List<PartyDetails> respondents = respondentWrapped.get()
                 .stream()
                 .map(Element::getValue)
-                .toList();
+                .collect(Collectors.toList());
 
             for (PartyDetails p : respondents) {
                 if (respondentDetailsStarted(p)) {
