@@ -232,7 +232,7 @@ public class ServiceOfApplicationEmailServiceTest {
         EmailNotificationDetails emailNotificationDetails = EmailNotificationDetails.builder()
             .emailAddress("test@email.com")
             .servedParty(SERVED_PARTY_APPLICANT_SOLICITOR)
-            .docs(documentList.stream().map(s -> element(s)).toList())
+            .docs(documentList.stream().map(s -> element(s)).collect(Collectors.toList()))
             .attachedDocs(String.join(",", documentList.stream().map(a -> a.getDocumentFileName()).collect(
                 Collectors.toList())))
             .timeStamp(currentDate).build();
@@ -312,7 +312,7 @@ public class ServiceOfApplicationEmailServiceTest {
         EmailNotificationDetails emailNotificationDetails = EmailNotificationDetails.builder()
             .emailAddress("test@email.com")
             .servedParty(SERVED_PARTY_APPLICANT_SOLICITOR)
-            .docs(documentList.stream().map(s -> element(s)).toList())
+            .docs(documentList.stream().map(s -> element(s)).collect(Collectors.toList()))
             .attachedDocs(String.join(",", documentList.stream().map(a -> a.getDocumentFileName()).collect(
                 Collectors.toList())))
             .timeStamp(currentDate).build();
@@ -393,7 +393,7 @@ public class ServiceOfApplicationEmailServiceTest {
         EmailNotificationDetails emailNotificationDetails = EmailNotificationDetails.builder()
             .emailAddress("test@email.com")
             .servedParty(SERVED_PARTY_APPLICANT_SOLICITOR)
-            .docs(documentList.stream().map(s -> element(s)).toList())
+            .docs(documentList.stream().map(s -> element(s)).collect(Collectors.toList()))
             .attachedDocs(String.join(",", documentList.stream().map(a -> a.getDocumentFileName()).collect(
                 Collectors.toList())))
             .timeStamp(currentDate).build();
@@ -473,7 +473,7 @@ public class ServiceOfApplicationEmailServiceTest {
         EmailNotificationDetails emailNotificationDetails = EmailNotificationDetails.builder()
             .emailAddress("test@email.com")
             .servedParty(SERVED_PARTY_RESPONDENT_SOLICITOR)
-            .docs(documentList.stream().map(s -> element(s)).toList())
+            .docs(documentList.stream().map(s -> element(s)).collect(Collectors.toList()))
             .attachedDocs(String.join(",", documentList.stream().map(a -> a.getDocumentFileName()).collect(
                 Collectors.toList())))
             .timeStamp(currentDate).build();
